--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.9.+'
+    }
+}
+
 apply plugin: 'android-library'
 
 android {
@@ -10,6 +19,11 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    
+    lintOptions {
+        abortOnError false
+    }
+
     buildTypes {
         release {
             runProguard false
