--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,13 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    
+
     lintOptions {
         abortOnError false
+    }
+
+    sourceSets {
+        androidTest.setRoot('src/test')
     }
 
     buildTypes {
