--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.silpa.syllabifier">
 
-    <application 
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
->
+    <application android:label="@string/app_name">
 
     </application>
 
