--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':sdk-common')
+    compile project(':sdk-render')
 }
 
 //apply from: '../gradle-mvn-push.gradle'
