--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,19 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.+'
+        classpath 'com.android.tools.build:gradle:1.3.0'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "org.silpa.syllabifier"
         minSdkVersion 9
-        //noinspection OldTargetApi
-        targetSdkVersion 19
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -26,19 +24,10 @@ android {
         abortOnError true
     }
 
-    sourceSets {
-        androidTest.setRoot('src/test')
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -47,8 +36,3 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':sdk-common')
 }
-
-// Uncomment following code while updating on maven central
-//
-// apply from: '../gradle-mvn-push.gradle'
-
