--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,14 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.silpa.syllabifier">
-
-    <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="19" />
+    package="org.libindic.syllabifier">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name">
-
     </application>
 
 </manifest>
